{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "a3d2662a-7b54-45b7-ab42-06bfbefc5862",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "cda31fec-3c11-4e43-a34b-4f9e01458b11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Float",
                    "type": "Button",
                    "id": "fadb9ac1-7692-4582-ad00-f82d47f4c41a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DropBelow",
                    "type": "Button",
                    "id": "15a43d02-fa58-4988-8567-093b8b1e6c28",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenPauseScreen",
                    "type": "Button",
                    "id": "16a48eec-1672-49f9-ac08-b793af89587f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b62ccd19-ffe5-477d-a0bd-7c5c7d62a9fa",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6aac9d85-e17c-46f8-8679-9a4e8828db87",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "673e769c-c0d4-44ee-89b8-7f6858787491",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "431dc261-f5a0-4554-9530-fad71626a6e9",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "292b8610-650d-4331-8f1c-fe3663cc142e",
                    "path": "<Keyboard>/w",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Float",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c415ab57-2eb6-4252-bfab-e710444b6008",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Float",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b80f47ab-8154-414e-9f8f-58fe6d9e0fb5",
                    "path": "<Keyboard>/space",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Float",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "680fa097-e353-4961-8c0b-a2243e613625",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Float",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8109dc1f-14dd-474d-afd7-b7a63e93deba",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "DropBelow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c65dcc4-c060-4312-8789-5dac19bd298b",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "DropBelow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd8e8233-fc6f-4764-98c1-775f782d8ba9",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "Gamepad",
                    "action": "DropBelow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7cb305a9-8143-4056-9156-be676bc897ee",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "DropBelow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87f24b0c-2a3b-4e0f-a055-c6453c842b57",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "OpenPauseScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41e6a279-7eff-42cd-8e7c-6348db9ff51e",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "OpenPauseScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ResetRun",
            "id": "e1009cc2-2fbb-414e-aeef-5c9e380d0862",
            "actions": [
                {
                    "name": "AnyKey",
                    "type": "Button",
                    "id": "0b6c092a-b8e8-4935-ae0d-d3f7cf3b8f5c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f98aeff6-767d-4a84-b31e-4314b222bf4b",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8c8d0e1-7193-462a-88a2-e766932418eb",
                    "path": "*/{Submit}",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PauseScreen",
            "id": "a13ef50a-e4a4-49e3-a42b-d60f6c397137",
            "actions": [
                {
                    "name": "QuitGame",
                    "type": "Button",
                    "id": "08df87e5-13d6-43f6-9668-61a3bf120204",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Continue",
                    "type": "Button",
                    "id": "8fa8db7e-ba3e-4c3d-9009-94ce7c3106c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7fd2d1b4-e1ad-4957-b33c-b858797bafc8",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "QuitGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c9a3b20-68be-447a-aa8b-af1ada24d828",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "QuitGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5d0717f-685f-40f5-a709-926b1c17b243",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Continue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "04be6b1d-3400-4fcb-bcfe-0043c231afff",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Continue",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}